# MVP

./: .gitignore  test_solver.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
ml/: README.md  requirements.txt
ml/src/: __init__.py  dataset.py  train_policy.py
vrp_solver/: Cargo.toml
vrp_solver/src/: lib.rs  logging.rs  main.rs
vrp_solver/src/layered/: bayes.rs  graph.rs  heuristics.rs  local.rs  meta.rs  mod.rs  nn.rs  plan.rs  pso.rs
