[package]
name = "vrp_solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "vrp_solver"
crate-type = ["staticlib", "rlib"] # Removed "cdylib" for Python

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
linfa = "0.7.1"
linfa-clustering = "0.7.1"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
