[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vrp_solver = { path = "../../vrp_solver" }
tauri-plugin-log = { version = "2.0.0-beta.15" }
log = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
